# py_mask_creator

./: .gitignore  greyscale_generator.py  mask_generator.py  myLib.py  pyproject.toml  rename.py  resizeImages.py
