[tool.poetry]
name = "process-images"
version = "0.1.0"
description = "turn images B&W and create masks for them"
authors = ["turcuciprian <turcuciprian1@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "process_images"}]

[tool.poetry.dependencies]
python = "^3.11"
pillow = "^9.4.0"
numpy = "^1.24.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
